Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32VB.BAS

Public Declare Function C13_KernMEMWrsW Lib "C13W32.DLL" Alias "_C13_KernMEMWrsW@20" (ByRef bufptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function C13_KernMEMWrW Lib "C13W32.DLL" Alias "_C13_KernMEMWrW@16" (ByVal value As Integer, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function C13_KernStatus Lib "C13W32.DLL" Alias "_C13_KernStatus@16" (ByRef valueptr As Long, ByVal typeval As Long, ByVal index As Long, ByVal handleval As Long) As Long
Public Declare Function C13_ListAddr Lib "C13W32.DLL" Alias "_C13_ListAddr@12" (ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_ListAddrEx Lib "C13W32.DLL" Alias "_C13_ListAddrEx@12" (ByVal index As Long, ByVal listaddr As Long, ByRef header As Integer) As Long
Public Declare Function C13_ListBlockRd Lib "C13W32.DLL" Alias "_C13_ListBlockRd@12" (ByRef buf As Integer, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_ListBlockRdEx Lib "C13W32.DLL" Alias "_C13_ListBlockRdEx@16" (ByRef buf As Integer, ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_ListBlockWr Lib "C13W32.DLL" Alias "_C13_ListBlockWr@12" (ByRef buf As Integer, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_ListBlockWrEx Lib "C13W32.DLL" Alias "_C13_ListBlockWrEx@16" (ByRef buf As Integer, ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_ListClear Lib "C13W32.DLL" Alias "_C13_ListClear@8" (ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_ListConfig Lib "C13W32.DLL" Alias "_C13_ListConfig@16" (ByVal configval As Long, ByVal count As Long, ByVal skipval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_ListConfigEx Lib "C13W32.DLL" Alias "_C13_ListConfigEx@16" (ByVal configval As Long, ByVal count As Long, ByVal skipval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_ListDataRdEx Lib "C13W32.DLL" Alias "_C13_ListDataRdEx@20" (ByRef buf As Integer, ByVal count As Long, ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_ListDataWrEx Lib "C13W32.DLL" Alias "_C13_ListDataWrEx@20" (ByRef buf As Integer, ByVal count As Long, ByVal index As Long, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_ListInit Lib "C13W32.DLL" Alias "_C13_ListInit@12" (ByVal listaddr As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_ListNextRd Lib "C13W32.DLL" Alias "_C13_ListNextRd@8" (ByVal listaddr As Long, ByRef header As Integer) As Long
Public Declare Function C13_ListNextWr Lib "C13W32.DLL" Alias "_C13_ListNextWr@8" (ByVal listaddr As Long, ByRef header As Integer) As Long
Public Declare Function C13_ListPostRd Lib "C13W32.DLL" Alias "_C13_ListPostRd@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_ListPostWr Lib "C13W32.DLL" Alias "_C13_ListPostWr@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_ListPreRd Lib "C13W32.DLL" Alias "_C13_ListPreRd@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_ListPreWr Lib "C13W32.DLL" Alias "_C13_ListPreWr@12" (ByVal listaddr As Long, ByRef header As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_ListStatus Lib "C13W32.DLL" Alias "_C13_ListStatus@8" (ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_MakeClientInfo Lib "C13W32.DLL" Alias "" (ByRef ptr As Long) As Long
Public Declare Function C13_MakeLong Lib "C13W32.DLL" Alias "_C13_MakeLong@8" (ByVal valh As Integer, ByVal vall As Integer) As Long
Public Declare Function C13_MakePtr Lib "C13W32.DLL" Alias "_C13_MakePtr@8" (ByVal valh As Integer, ByVal vall As Integer) As Long
Public Declare Function C13_Mask Lib "C13W32.DLL" Alias "_C13_Mask@8" (ByVal dataval As Long, ByVal cntval As Integer) As Long
Public Declare Function C13_MEMWINFillW Lib "C13W32.DLL" Alias "_C13_MEMWINFillW@20" (ByVal value As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function C13_MEMWINRdB Lib "C13W32.DLL" Alias "_C13_MEMWINRdB@12" (ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Integer
Public Declare Function C13_MEMWINRdL Lib "C13W32.DLL" Alias "_C13_MEMWINRdL@12" (ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function C13_MEMWINRdsL Lib "C13W32.DLL" Alias "_C13_MEMWINRdsL@20" (ByRef valueptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function C13_MEMWINRdsW Lib "C13W32.DLL" Alias "_C13_MEMWINRdsW@20" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function C13_MEMWINRdW Lib "C13W32.DLL" Alias "_C13_MEMWINRdW@12" (ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Integer
Public Declare Function C13_MEMWINWrB Lib "C13W32.DLL" Alias "_C13_MEMWINWrB@16" (ByVal value As Integer, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function C13_MEMWINWrL Lib "C13W32.DLL" Alias "_C13_MEMWINWrL@16" (ByVal value As Long, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function C13_MEMWINWrsL Lib "C13W32.DLL" Alias "_C13_MEMWINWrsL@20" (ByRef valueptr As Long, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function C13_MEMWINWrsW Lib "C13W32.DLL" Alias "_C13_MEMWINWrsW@20" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal countval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function C13_MEMWINWrW Lib "C13W32.DLL" Alias "_C13_MEMWINWrW@16" (ByVal value As Integer, ByVal addrval As Long, ByVal bustype As Long, ByVal handleval As Long) As Long
Public Declare Function C13_Mod Lib "C13W32.DLL" Alias "_C13_Mod@8" (ByVal moda As Long, ByVal modb As Long) As Long
Public Declare Function C13_ModeIsBC Lib "C13W32.DLL" Alias "_C13_ModeIsBC@4" (ByVal handleval As Long) As Long
Public Declare Function C13_ModeIsMon Lib "C13W32.DLL" Alias "_C13_ModeIsMon@4" (ByVal handleval As Long) As Long
Public Declare Function C13_ModeIsNotBC Lib "C13W32.DLL" Alias "_C13_ModeIsNotBC@4" (ByVal handleval As Long) As Long
Public Declare Function C13_ModeIsNotMon Lib "C13W32.DLL" Alias "_C13_ModeIsNotMon@4" (ByVal handleval As Long) As Long
Public Declare Function C13_ModeIsNotPlay Lib "C13W32.DLL" Alias "_C13_ModeIsNotPlay@4" (ByVal handleval As Long) As Long
Public Declare Function C13_ModeIsNotRT Lib "C13W32.DLL" Alias "_C13_ModeIsNotRT@4" (ByVal handleval As Long) As Long
Public Declare Function C13_ModeIsNotSerial Lib "C13W32.DLL" Alias "_C13_ModeIsNotSerial@4" (ByVal handleval As Long) As Long
Public Declare Function C13_ModeIsPlay Lib "C13W32.DLL" Alias "_C13_ModeIsPlay@4" (ByVal handleval As Long) As Long
Public Declare Function C13_ModeIsRT Lib "C13W32.DLL" Alias "_C13_ModeIsRT@4" (ByVal handleval As Long) As Long
Public Declare Function C13_ModeIsSerial Lib "C13W32.DLL" Alias "_C13_ModeIsSerial@4" (ByVal handleval As Long) As Long
Public Declare Function C13_ModeRd Lib "C13W32.DLL" Alias "_C13_ModeRd@4" (ByVal handleval As Long) As Integer
Public Declare Function C13_ModeWr Lib "C13W32.DLL" Alias "_C13_ModeWr@8" (ByVal mode As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_MonClear Lib "C13W32.DLL" Alias "_C13_MonClear@4" (ByVal handleval As Long) As Long
Public Declare Function C13_MonConfigEx Lib "C13W32.DLL" Alias "_C13_MonConfigEx@16" (ByVal configval As Long, ByVal moncount As Long, ByVal cardnum As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_MonConfigExx Lib "C13W32.DLL" Alias "_C13_MonConfigExx@20" (ByVal configval As Long, ByVal seqaddr As Long, ByVal moncount As Long, ByVal cardnum As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_MonFilterSAEx Lib "C13W32.DLL" Alias "_C13_MonFilterSAEx@24" (ByVal taval As Long, ByVal rcvsamask As Long, ByVal xmtsamask As Long, ByVal rcvmcmask As Long, ByVal xmtmcmask As Long, ByVal handleval As Long) As Long
Public Declare Function C13_MonRdEx Lib "C13W32.DLL" Alias "_C13_MonRdEx@12" (ByRef buf As Integer, ByVal bufcount As Integer, ByVal handleval As Long) As Integer
Public Declare Function C13_MonResume Lib "C13W32.DLL" Alias "_C13_MonResume@4" (ByVal handleval As Long) As Long
Public Declare Function C13_MonStart Lib "C13W32.DLL" Alias "_C13_MonStart@4" (ByVal handleval As Long) As Long
Public Declare Function C13_MonStatus Lib "C13W32.DLL" Alias "_C13_MonStatus@4" (ByVal handleval As Long) As Long
Public Declare Function C13_MonStop Lib "C13W32.DLL" Alias "_C13_MonStop@4" (ByVal handleval As Long) As Long
Public Declare Function C13_MsgBlockRd Lib "C13W32.DLL" Alias "_C13_MsgBlockRd@12" (ByRef buf As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_MsgBlockWr Lib "C13W32.DLL" Alias "_C13_MsgBlockWr@12" (ByRef buf As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_MsgCheck Lib "C13W32.DLL" Alias "_C13_MsgCheck@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function C13_MsgCommRd Lib "C13W32.DLL" Alias "_C13_MsgCommRd@12" (ByRef buf As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_MsgCommWr Lib "C13W32.DLL" Alias "_C13_MsgCommWr@12" (ByRef buf As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_MsgConfig Lib "C13W32.DLL" Alias "_C13_MsgConfig@8" (ByVal configval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_MsgConfigEx Lib "C13W32.DLL" Alias "_C13_MsgConfigEx@12" (ByVal configval As Long, ByVal cwd As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_MsgCWD1Rd Lib "C13W32.DLL" Alias "_C13_MsgCWD1Rd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function C13_MsgCWD1Wr Lib "C13W32.DLL" Alias "_C13_MsgCWD1Wr@12" (ByVal cwd1 As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_MsgCWD2Rd Lib "C13W32.DLL" Alias "_C13_MsgCWD2Rd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function C13_MsgCWD2Wr Lib "C13W32.DLL" Alias "_C13_MsgCWD2Wr@12" (ByVal cwd2 As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_MsgErrorRd Lib "C13W32.DLL" Alias "_C13_MsgErrorRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function C13_MsgErrorWr Lib "C13W32.DLL" Alias "_C13_MsgErrorWr@12" (ByVal value As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_MsgFlagRd Lib "C13W32.DLL" Alias "_C13_MsgFlagRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
Public Declare Function C13_MsgFlagWr Lib "C13W32.DLL" Alias "_C13_MsgFlagWr@12" (ByVal msgflag As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_MsgIsAccessed Lib "C13W32.DLL" Alias "_C13_MsgIsAccessed@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_MsgOptRd Lib "C13W32.DLL" Alias "_C13_MsgOptRd@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Integer
